# Price-Error-Bot

./: .env.example  .gitignore  ANALYSIS.md  ANALYSIS_README.md  ANALYSIS_SUMMARY.md  QUICK_START_GUIDE.md  README.md  RECOMMENDATIONS.md  activate_venv.ps1  alembic.ini  build_exe.ps1  categories_seed.json  docker-compose.yml  install.ps1  install.sh  launcher.py  launcher.spec  pyproject.toml  start.ps1  start.sh  update.ps1
.cursor/plans/: fix_scan_connection_errors_e0267301.plan.md  unified_exe_orchestrator_a34b71ac.plan.md
alembic/: env.py
alembic/versions/: 001_initial.py  002_add_ai_features.py  002_proxy_categories.py  003_add_session_metadata.py  003_scan_improvements.py  004_add_baselines_webhooks.py  004_add_scan_lock_fields.py  004_add_search_support.py  005_add_proxy_enhancements.py  006_alter_proxy_password_column.py  35f69e7a29a3_add_image_url_to_products.py  36c4b2d3a9f0_add_store_category_last_error.py
docs/: RECOVERY.md  search-api-contract.md  search-api-reference.md  search-migration-guide.md  search-requirements.md  search-user-guide.md
monitoring/: loki-config.yml  prometheus.yml  promtail-config.yml
scripts/: cleanup_products.py  diagnose_scan_lock.py  generate_embeddings_for_existing.py  seed_categories.py  seed_search_data.py
src/: __init__.py  config.py  logging_config.py  main.py  metrics.py
src/ai/: __init__.py  anomaly_features.py  attribute_extractor.py  (+9 more)
tests/: test_anomaly_detector.py  test_attribute_extractor.py  test_embedding_service.py  test_llm_service.py  test_product_matcher.py  test_scan_lock.py  test_scan_workflow.py  test_search.py  test_search_integration.py  test_search_performance.py
(+1047 files in other folders)
