[project]
name = "price-error-bot"
version = "0.1.0"
description = "Price error detection bot for monitoring e-commerce prices"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.23",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "apscheduler>=3.10.4",
    "httpx>=0.26.0",
    "redis>=5.0.1",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.3",
    "python-multipart>=0.0.6",
    "psycopg2-binary>=2.9.9",
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "selectolax>=0.3.17",
    "prometheus-fastapi-instrumentator>=6.1.0",
    "prometheus-client>=0.19.0",
    "python-json-logger>=2.0.7",
    "pywebview>=4.4.1",
    "psutil>=5.9.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "lxml>=5.0.0",
    "cryptography>=42.0.4",
    "joblib>=1.3.0",
    "sentence-transformers>=2.2.0",
    "openai>=1.0.0",
    "pgvector>=0.2.0",
    "spacy>=3.7.0",
    "transformers>=4.35.0",
    "torch>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "black>=24.1.1",
    "ruff>=0.1.11",
]
build = [
    "pyinstaller>=6.0.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
